# zenavif-serialize

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: optimize.rs
src/: animated.rs  boxes.rs  grid.rs  lib.rs  writer.rs
